--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "firebase": "^12.4.0",
+    "nodemailer": "^6.9.15",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
