--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "firebase": "^12.4.0",
-    "nodemailer": "^6.9.15",
+    "firebase-admin": "^13.6.0",
     "next": "15.5.4",
+    "nodemailer": "^6.9.15",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
